--- a/res/com.binaryage.asepsis.uninstall.plist
+++ b/res/com.binaryage.asepsis.uninstall.plist
@@ -3,10 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>com.binaryage.asepsis.kext-uninstall</string>
+	<string>com.binaryage.asepsis.uninstall</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Library/Application Support/Asepsis/finish-kext-uninstall.sh</string>
+		<string>/bin/rm</string>
+		<string>-rf</string>
+		<string>/Library/LaunchDaemons/com.binaryage.asepsis.uninstall.plist</string>
+		<string>/Library/Application Support/Asepsis</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
